# Travel-planner-agent

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  00_README_TEST_FIXES.md  ALL_TESTS_COMPLETED_SUMMARY.md  AWS_HELPERS_README.md  BEFORE_AFTER_COMPARISON.md  BUDGET_ANALYSIS_DELIVERABLES.py  BUDGET_ANALYSIS_EXAMPLES.py  BUDGET_ANALYSIS_IMPLEMENTATION_SUMMARY.md  BUDGET_ANALYSIS_INDEX.md  BUDGET_ANALYSIS_NODE_README.md  BUDGET_ANALYSIS_QUICK_REFERENCE.txt  CODE_REFERENCE.md  COMPLETE_DELIVERY_CHECKLIST.md  COMPLETE_PROJECT_DELIVERY.md  COMPLETION_CERTIFICATE.txt  COMPLETION_SUMMARY.md  COMPLETION_VERIFICATION.md  COMPREHENSIVE_TEST_REPORT.md  DETAILED_CHANGES.md  DOCUMENTATION_INDEX.md  ENHANCEMENTS_SUMMARY.md  EXAMPLES_DELIVERY_COMPLETE.md  FILE_LISTING.py  FILE_MODIFICATION_SUMMARY.md  FINAL_PROJECT_VERIFICATION.md  FIXES_SUMMARY.py  GRAPH_VISUALIZATION_FINAL_STATUS.md  GRAPH_VISUALIZATION_VERIFICATION.md  INTEGRATION_TESTS_VERIFICATION.md  ITINERARY_FINAL_DELIVERY_REPORT.md  LICENSE  LLM_CONFIGURATION_GUIDE.md  LOGGER_DOCUMENTATION.md  LOGGER_EXAMPLES.py  LOGGER_QUICK_REFERENCE.md  LOGGING_README.md  MAIN_COMPLETION_REPORT.md  (+70 more)
docs/architecture/: graph.md
examples/: README.md  budget_backpacking.sh  insufficient_budget.sh  luxury_trip.sh  successful_planning.sh
src/: __init__.py  __main__.py  graph.py  main.py
src/agents/: __init__.py  state.py
src/api/: __init__.py  models.py
src/api/routes/: __init__.py
src/cache/: __init__.py
src/config/: README.md  __init__.py  settings.py
src/config/environments/: __init__.py  dev.yaml  development.py  production.py  staging.py  staging.yaml
src/data_pipeline/: __init__.py
src/nodes/: __init__.py  itinerary_nodes.py  planning_nodes.py  tool_nodes.py
src/observability/: __init__.py  logging.py  metrics.py
src/rag/: __init__.py  models.py
src/utils/: __init__.py  aws_helpers.py  error_handler.py  logger.py  retry.py  validators.py  visualize.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_tools.py
tests/unit/: test_utils.py
